<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShowTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_button_text">Search</string>
    <string name="action_add_show">Add Show</string>
    <string name="search_title">Add New Show</string>
    <string name="search_entery_added">Added </string>
    <string name="search_edit_hint">Show name</string>
    <string name="search_entery_exixts">Already Exists</string>
    <string name="week_view">Week View</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="season_dialog_title">Pick Season</string>
    <string name="update">Update</string>
    <string-array name="connection_method">
        <item>Mobile</item>
        <item>Roaming</item>
        <item>WiFi</item>
        <item>Ethernet</item>
    </string-array>


</resources>
