<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:addStatesFromChildren="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:text="@string/monday"
                android:id="@+id/dayMondayText"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dayListMonday"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:text="@string/tuesday"
                android:id="@+id/dayTuesdayText"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dayListTuesday"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:text="@string/wednesday"
                android:id="@+id/dayWednesdayText"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dayListWednesday"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:text="@string/thursday"
                android:id="@+id/dayThursdayText"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dayListThursday"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:text="@string/friday"
                android:id="@+id/dayFridayText"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dayListFriday"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:text="@string/saturday"
                android:id="@+id/daySaturdayText"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dayListSaturday"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:text="@string/sunday"
                android:id="@+id/daySundayText"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dayListSunday"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/black">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:onClick="backWeek"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Week xx"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/weekText"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="Forward"
            android:onClick="forwardWeek"/>
    </LinearLayout>
</LinearLayout>